refactor: Elasticsearch 설정을 환경 변수 기반으로 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,9 +20,7 @@ spring:
     elasticsearch:
       client:
         elasticsearch:
-          uris: http://localhost:9200
-  #elasticsearch:
-    #uris: ${ES_URL}
+          uris: ${ES_URL}
 
   jpa:
     hibernate:
